// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Components service endpoint returns an array of multiple components with key software renders each component with each key software 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Repos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Errors
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
  >
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-secondary collapsed"
      id="toggle-filters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__91"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__91__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__92"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__92_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__92_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__92_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__92_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__92_BV_option_2"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__92_BV_option_2"
                        >
                          <span>
                            test-team-id-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__92_BV_option_3"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__92_BV_option_3"
                        >
                          <span>
                            test-team-id-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__92_BV_option_4"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__92_BV_option_4"
                        >
                          <span>
                            test-team-id-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__92_BV_option_5"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__92_BV_option_5"
                        >
                          <span>
                            test-team-id-3-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__99"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__99__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__100"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__100_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__100_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__100_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__100_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__100_BV_option_2"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__100_BV_option_2"
                        >
                          <span>
                            test-tag-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__100_BV_option_3"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__100_BV_option_3"
                        >
                          <span>
                            test-tag-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__100_BV_option_4"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__100_BV_option_4"
                        >
                          <span>
                            test-tag-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__100_BV_option_5"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__100_BV_option_5"
                        >
                          <span>
                            test-tag-3-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__107"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__107__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__108"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__108_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__108_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__108_BV_option_1"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__108_BV_option_1"
                        >
                          <span>
                            test-component-type-id-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__108_BV_option_2"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-3"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__108_BV_option_2"
                        >
                          <span>
                            test-component-type-id-3
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__112"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__112__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__113"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__113_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__113_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <div
                  class="form-group"
                  id="__BVID__115"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__115__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                      <option
                        value="test-component-id-2"
                      >
                        test-component-id-2
                      </option>
                      <option
                        value="test-component-id-3"
                      >
                        test-component-id-3
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </p>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          test-key-software-1
        </th>
        <th>
          test-key-software-2
        </th>
        <th>
          test-key-software-3
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td>
          <span>
            
          test-version-1
            <br />
          </span>
        </td>
        <td />
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-2
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-2"
          >
            Test Component Name 2
          </a>
        </td>
         
        <td />
        <td>
          <span>
            
          test-version-2
            <br />
          </span>
        </td>
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-3
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-3"
          >
            Test Component Name 3
          </a>
        </td>
         
        <td />
        <td />
        <td>
          <span>
            
          test-version-3
            <br />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Components service endpoint returns an array of multiple components with no key software renders a table row for each component 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Repos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Errors
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
  >
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-secondary collapsed"
      id="toggle-filters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__46"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__46__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__47"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__47_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__47_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__47_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__47_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__47_BV_option_2"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__47_BV_option_2"
                        >
                          <span>
                            test-team-id-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__47_BV_option_3"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__47_BV_option_3"
                        >
                          <span>
                            test-team-id-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__47_BV_option_4"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__47_BV_option_4"
                        >
                          <span>
                            test-team-id-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__47_BV_option_5"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__47_BV_option_5"
                        >
                          <span>
                            test-team-id-3-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__54"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__54__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__55"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__55_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__55_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__55_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__55_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__55_BV_option_2"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__55_BV_option_2"
                        >
                          <span>
                            test-tag-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__55_BV_option_3"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__55_BV_option_3"
                        >
                          <span>
                            test-tag-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__55_BV_option_4"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__55_BV_option_4"
                        >
                          <span>
                            test-tag-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__55_BV_option_5"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__55_BV_option_5"
                        >
                          <span>
                            test-tag-3-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__62"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__62__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__63"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__63_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__63_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__63_BV_option_1"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__63_BV_option_1"
                        >
                          <span>
                            test-component-type-id-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__63_BV_option_2"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-3"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__63_BV_option_2"
                        >
                          <span>
                            test-component-type-id-3
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__67"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__67__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__68"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__68_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__68_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <div
                  class="form-group"
                  id="__BVID__70"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__70__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                      <option
                        value="test-component-id-2"
                      >
                        test-component-id-2
                      </option>
                      <option
                        value="test-component-id-3"
                      >
                        test-component-id-3
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </p>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-2
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-2"
          >
            Test Component Name 2
          </a>
        </td>
         
        <td />
      </tr>
      <tr>
        <td>
          test-component-type-id-3
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-3"
          >
            Test Component Name 3
          </a>
        </td>
         
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Components service endpoint returns an array of multiple components with the same key software names for each component renders only one table column per key software name 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Repos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Errors
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
  >
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-secondary collapsed"
      id="toggle-filters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__136"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__136__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__137"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__137_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__137_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__137_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__137_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__137_BV_option_2"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__137_BV_option_2"
                        >
                          <span>
                            test-team-id-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__137_BV_option_3"
                          name="team"
                          type="checkbox"
                          value="test-team-id-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__137_BV_option_3"
                        >
                          <span>
                            test-team-id-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__137_BV_option_4"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__137_BV_option_4"
                        >
                          <span>
                            test-team-id-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__137_BV_option_5"
                          name="team"
                          type="checkbox"
                          value="test-team-id-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__137_BV_option_5"
                        >
                          <span>
                            test-team-id-3-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__144"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__144__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__145"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__145_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__145_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__145_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__145_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__145_BV_option_2"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__145_BV_option_2"
                        >
                          <span>
                            test-tag-2-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__145_BV_option_3"
                          name="tag"
                          type="checkbox"
                          value="test-tag-2-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__145_BV_option_3"
                        >
                          <span>
                            test-tag-2-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__145_BV_option_4"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__145_BV_option_4"
                        >
                          <span>
                            test-tag-3-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__145_BV_option_5"
                          name="tag"
                          type="checkbox"
                          value="test-tag-3-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__145_BV_option_5"
                        >
                          <span>
                            test-tag-3-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__152"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__152__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__153"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__153_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__153_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__153_BV_option_1"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__153_BV_option_1"
                        >
                          <span>
                            test-component-type-id-2
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__153_BV_option_2"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-3"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__153_BV_option_2"
                        >
                          <span>
                            test-component-type-id-3
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__157"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__157__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__158"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__158_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__158_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <div
                  class="form-group"
                  id="__BVID__160"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__160__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                      <option
                        value="test-component-id-2"
                      >
                        test-component-id-2
                      </option>
                      <option
                        value="test-component-id-3"
                      >
                        test-component-id-3
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </p>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          test-key-software-1
        </th>
        <th>
          test-key-software-2
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td>
          <span>
            
          test-version-1
            <br />
          </span>
        </td>
        <td>
          <span>
            
          test-version-2
            <br />
          </span>
        </td>
      </tr>
      <tr>
        <td>
          test-component-type-id-2
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-2"
          >
            Test Component Name 2
          </a>
        </td>
         
        <td>
          <span>
            
          test-version-3
            <br />
          </span>
        </td>
        <td>
          <span>
            
          test-version-4
            <br />
          </span>
        </td>
      </tr>
      <tr>
        <td>
          test-component-type-id-3
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-3"
          >
            Test Component Name 3
          </a>
        </td>
         
        <td>
          <span>
            
          test-version-5
            <br />
          </span>
        </td>
        <td>
          <span>
            
          test-version-6
            <br />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Index when Get Components service endpoint returns an empty array renders the page 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Repos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Errors
    </a>
  </div>
   
  <!---->
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
      </tr>
    </thead>
     
    <tbody />
  </table>
</div>
`;

exports[`Index when a key software has multiple versions renders all versions 1`] = `
<div
  class="m-3"
>
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Components
    </a>
     
    <a
      class="btn btn-secondary"
      href="?testOutcome=fail"
      target="_self"
    >
      
    Tests
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Tech Debts
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    OpenAPI Specs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      
    Key Software
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Repos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="#"
      target="_self"
    >
      Errors
    </a>
  </div>
   
  <div
    class="mt-3 mb-4"
  >
    <button
      aria-controls="filters"
      aria-expanded="false"
      class="btn btn-secondary collapsed"
      id="toggle-filters"
      type="button"
    >
      <svg
        aria-hidden="true"
        aria-label="blank"
        class="bi-blank b-icon bi"
        fill="currentColor"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g />
      </svg>
       Filters
  
    </button>
     
    <transition-stub
      class="mt-3"
      css="true"
      enteractiveclass="collapsing"
      enterclass=""
      entertoclass="collapse show"
      leaveactiveclass="collapsing"
      leaveclass="collapse show"
      leavetoclass="collapse"
    >
      <div
        class="collapse"
        id="filters"
        style="display: none;"
      >
        <div
          class="card-columns"
        >
           
          <!---->
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__181"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__181__BV_label_"
                    tabindex="-1"
                  >
                    Teams
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__182"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__182_BV_option_0"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__182_BV_option_0"
                        >
                          <span>
                            test-team-id-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__182_BV_option_1"
                          name="team"
                          type="checkbox"
                          value="test-team-id-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__182_BV_option_1"
                        >
                          <span>
                            test-team-id-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__185"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__185__BV_label_"
                    tabindex="-1"
                  >
                    Tags
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__186"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__186_BV_option_0"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__186_BV_option_0"
                        >
                          <span>
                            test-tag-1-1
                          </span>
                        </label>
                      </div>
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__186_BV_option_1"
                          name="tag"
                          type="checkbox"
                          value="test-tag-1-2"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__186_BV_option_1"
                        >
                          <span>
                            test-tag-1-2
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__189"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__189__BV_label_"
                    tabindex="-1"
                  >
                    Component Types
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__190"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__190_BV_option_0"
                          name="componentTypeId"
                          type="checkbox"
                          value="test-component-type-id-1"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__190_BV_option_0"
                        >
                          <span>
                            test-component-type-id-1
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <fieldset
                  class="form-group"
                  id="__BVID__192"
                >
                  <legend
                    class="bv-no-focus-ring col-form-label pt-0"
                    id="__BVID__192__BV_label_"
                    tabindex="-1"
                  >
                    Platforms
                  </legend>
                  <div>
                    <div
                      class="bv-no-focus-ring"
                      id="__BVID__193"
                      role="group"
                      tabindex="-1"
                    >
                      <div
                        class="custom-control custom-checkbox"
                      >
                        <input
                          class="custom-control-input"
                          id="__BVID__193_BV_option_0"
                          name="platformId"
                          type="checkbox"
                          value="undefined"
                        />
                        <label
                          class="custom-control-label"
                          for="__BVID__193_BV_option_0"
                        >
                          <span>
                            undefined
                          </span>
                        </label>
                      </div>
                    </div>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </fieldset>
              </p>
            </div>
            <!---->
            <!---->
          </div>
           
          <div
            class="card bg-secondary"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <p
                class="card-text"
              >
                <div
                  class="form-group"
                  id="__BVID__195"
                  role="group"
                >
                  <label
                    class="d-block"
                    for="component-filter"
                    id="__BVID__195__BV_label_"
                  >
                    Component
                  </label>
                  <div>
                    <select
                      class="custom-select custom-select-sm"
                      id="component-filter"
                    >
                      <option
                        value=""
                      >
                        Please select a component
                      </option>
                      <option
                        value="test-component-id-1"
                      >
                        test-component-id-1
                      </option>
                    </select>
                    <!---->
                    <!---->
                    <!---->
                  </div>
                </div>
              </p>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
   
  <table
    class="table table-dark table-bordered table-striped mt-2"
    style="width: 100%;"
  >
    <thead>
      <tr>
        <th
          class="component-type"
        >
          Type
        </th>
         
        <th
          class="component-name"
        >
          Name
        </th>
         
        <th>
          test-key-software-1
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td>
          test-component-type-id-1
        </td>
         
        <td
          class="component-name table-primary"
        >
          <a
            href="/components/test-component-id-1"
          >
            Test Component Name 1
          </a>
        </td>
         
        <td>
          <span>
            
          test-version-1
            <br />
          </span>
          <span>
            
          test-version-2
            <br />
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
